<?xml version="1.0"?>
<package>
  <name>gerona</name>
  <version>1.0.0</version>
  <description>
        The GeRoNa stack contains packages for path planning and following.
  </description>

  <author email="goran.huskic@uni-tuebingen.de">Goran Huskic</author>
  <author email="mail@betwo.eu">Sebastian Buck</author>
  <author email="felix.widmaier@uni-tuebingen.de">Felix Widmaier</author>

  <maintainer email="goran.huskic@uni-tuebingen.de">Goran Huskic</maintainer>
  <maintainer email="mail@betwo.eu">Sebastian Buck</maintainer>
  <maintainer email="julian.jordan@uni-tuebingen.de">Julian Jordan</maintainer>
  <maintainer email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>path_msgs</run_depend>
  <run_depend>path_control</run_depend>
  <run_depend>path_planner</run_depend>
  <run_depend>path_follower</run_depend>
  <run_depend>path_rviz</run_depend>

  <export>
   <metapackage />
  </export>
</package>
