<?xml version="1.0"?>
<package>
  <name>navigation_launch</name>
  <version>1.0.0</version>
  <description>The navigation_launch package contains different launch files</description>

  <author email="sebastian.buck@uni-tuebingen.de">Sebastian Buck</author>
  <author email="felix.widmaier@uni-tuebingen.de">Felix Widmaier</author>

  <maintainer email="goran.huskic@uni-tuebingen.de">Goran Huskic</maintainer>
  <maintainer email="sebastian.buck@uni-tuebingen.de">Sebastian Buck</maintainer>
  <maintainer email="julian.jordan@uni-tuebingen.de">Julian Jordan</maintainer>
  <maintainer email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
