<?xml version="1.0"?>
<package>
  <name>path_control</name>
  <version>0.0.0</version>
  <description>Controls path planning and execution.</description>

  <maintainer email="felix.widmaier@uni-tuebingen.de">Felix Widmaier</maintainer>
  <maintainer email="sebastian.buck@uni-tuebingen.de">Sebastian Buck</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>path_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>path_msgs</run_depend>
  <run_depend>tf</run_depend>


  <export>
  </export>
</package>
