<?xml version="1.0"?>
<package>
  <name>path_follower</name>
  <version>0.0.0</version>
  <description>
    This package gets a path from path_control and controls the robot to drive on it.
    It is based on the behavioural path driver of the old motion_control package.
  </description>

  <maintainer email="goran.huskic@uni-tuebingen.de">Goran Huskic</maintainer>
  <maintainer email="sebastian.buck@uni-tuebingen.de">Sebastian Buck</maintainer>
  <maintainer email="felix.widmaier@uni-tuebingen.de">Felix Widmaier</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>path_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cslibs_utils</build_depend>
  <build_depend>cslibs_path_planning</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>libalglib-dev</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>path_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cslibs_utils</run_depend>
  <run_depend>cslibs_path_planning</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>tf_conversions</run_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>


  <export>
  </export>
</package>
